# kidney-genetics-db

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .trivyignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  CLINGEN-GENCC-PLAN.md  Cache-refactor.md  DEV_WORKFLOW.md  GEMINI.md  HPO-REIMPLEMENTATION.md  LOGO-GUIDE.md  MIGRATION_SQUASHING_PLAN.md  MIGRATION_SQUASH_REPORT.md  Makefile  PLAN.md  README.md  REFACTOR.md  ROADMAP.md  STYLE-GUIDE.md  TODO.md  UI-UX-REPORT.md  VIEW_MANAGEMENT_PROPOSAL.md  clinvar-annotation-implementation.md  docker-compose.prod.test.yml  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  init.sql  plan.md  refactor.md  schema.sql  test_backup_ui.js  test_network_analysis.py
backend/: .dockerignore  .env.example  Dockerfile  FINAL_DATABASE_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SQUASH_PLAN.md  MIGRATION_SQUASH_PLAN_CORRECTED.md  README.md  REFACTOR.md  SCHEMA_DIFFERENCES_ANALYSIS.md  SECURITY_AUDIT_SYSTEM_SETTINGS.md  TESTING.md  apply_views.py  debug_hgnc.py  docker-entrypoint.sh  eutils-clinvar.md  monitor_hpo.sh  pyproject.toml  refactor.md  refactoring-summary.md  remove_omim.py  schema_differences.json  test_api.py  test_auth.py  test_auth_complete.py  test_gencc_cache.py  test_gencc_debug.py  test_hpo_direct.py  test_hpo_modules.py  test_hpo_pipeline.py  test_hpo_simple.py  test_hpo_single_term.py  test_hpo_update.py  test_normalization.py  test_syndromic_demo.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema_v1.py  001_initial_complete_schema.py  001_modern_complete_schema.py  002_add_missing_gene_staging_columns.py  002_modern_complete_fixed.py  003_update_views_for_hybrid_sources.py  004_remove_static_ingestion_tables.py  005_create_scoring_views.py  006_fix_missing_views.py  02bb6061236e_add_backup_jobs_table.py  0801ee5fb7f9_add_pubtator_pmids_index.py  0834f2555442_add_missing_indexes_for_cache_and_.py  1455a03d0cce_update_percentile_view_for_clingen_and_.py  15ad8825b8e5_convert_gene_scores_to_materialized_view.py  1913be50fe24_add_gene_curation_update_trigger.py  1c0a4ff21798_implement_weighted_gencc_scoring_with_3_.py  1e0dd188d993_fix_evidence_unique_constraint_to_gene_.py  21d650ef9500_add_system_settings_tables.py  27cf0b9a6f36_create_gene_scores_view_and_ensure_all_.py  285000c93ed5_add_refresh_tokens_table.py  2b9ab9b60926_initial_schema.py  2d3f4a5b6c7e_normalize_gencc_weighted_scores_with_.py  2f6d3f0fa406_create_data_releases_table.py  3a4b5c6d7e8f_add_pubtator_evidence_score_column.py  443aa8a1ddf7_fix_classification_field_in_scoring_.py  5024f3c7fab3_add_percentage_scoring_with_source_count.py  57009b4faa2c_fix_stale_annotation_versions_unique_.py  5e5f74345f03_merge_migrations.py  65d25f57857a_add_gene_normalization_staging_tables.py  68b329da9893_add_temporal_versioning_to_genes.py  77c32f88d831_hybrid_source_crud_foundation.py  78f29a992e5d_improve_evidence_merge_logic.py  86bdb75bc293_add_string_ppi_percentiles_view.py  8f3a2b1c4d5e_consolidated_static_scoring_fix.py  8f42e6080805_add_dashboard_source_distribution_views.py  a1b2c3d4e5f6_add_functional_index_upper_approved_symbol.py  a1b2c3d4e5f6_dynamic_panel_scoring.py  add_percentile_views.py  ae289b364fa1_add_evidence_tiers_to_gene_scores_view.py  b2c3d4e5f6g7_static_percentile_scoring.py  (+16 more)
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: arq_client.py  arq_tasks.py  arq_worker.py  background_tasks.py  cache.py  cache_decorator.py  cache_invalidation.py  cache_service.py  cached_http_client.py  config.py  constants.py  data_source_base.py  database.py  database_init.py  datasource_config.py  dependencies.py  domain_rate_limiter.py  events.py  exceptions.py  feature_flags.py  gene_filters.py  gene_normalization.py  gene_normalization_async.py  gene_normalizer.py  hgnc_client.py  hgnc_client_cached.py  initial_seeder.py  jsonapi.py  monitoring.py  percentile_service.py  pipeline_orchestrator.py  progress_tracker.py  query_builder.py  rate_limit.py  resource_monitor.py  responses.py  retry_utils.py  scheduler.py  security.py  shadow_testing.py  (+7 more)
backend/app/crud/: __init__.py  evidence_transform.py  gene.py  gene_staging.py  statistics.py  statistics_handlers.py
backend/app/data/: mpo_kidney_terms.json
backend/app/db/: __init__.py  alembic_ops.py  materialized_views.py  registry.py  replaceable_objects.py  safe_sql.py  views.py
backend/config/: annotations.yaml  api_defaults.yaml  datasources.yaml  keywords.yaml  network_analysis.yaml
backend/scripts/: README.md  analyze_schema_differences.py  backfill_clinvar_consequences.py  benchmark_pipeline.py  clean_database.py  cleanup_data_sources.py  create_admin_user.py  initialize_database.py  rebuild_data.py  run_all_sources.py  setup_database.py  upload_manual_sources.py
backend/tests/: __init__.py  conftest.py  factories.py  test_app_import.py  test_auth_security.py  test_backup_enum.py  test_cache_decorator.py  test_cache_integration.py  test_cache_service.py  test_cache_thread_safety.py  test_cached_http_client.py  test_client_logs.py  test_clingen_bulk.py  test_clinvar_consequences.py  test_config_backward_compat.py  test_config_secrets.py  test_data_source_base_guards.py  test_database_views.py  test_domain_rate_limiter.py  test_evidence_filtering.py  test_exception_handlers.py  test_filtering.py  test_gene_annotations.py  test_gene_normalization.py  test_gene_normalization_core.py  test_gene_resolve.py  test_hgnc_client.py  test_hybrid_crud.py  test_initial_seeder.py  test_matview_definition.py  test_mgi_filtering.py  test_models_progress.py  test_models_static_sources.py  test_mpo_mgi_bulk.py  test_network_endpoints.py  test_percentile_service.py  test_pipeline_orchestrator.py  test_pubtator_gene_centric.py  test_pubtator_normalization.py  test_pubtator_rate_limiting.py  (+13 more)
scrapers/literature/: README.md  base_literature_scraper.py  filter_config.py  issue.md  literature_scraper_individual.py  main.py  plan.md  pyproject.toml  run_literature_scraper.py  schemas.py  utils.py
(+928 files in other folders)
