[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "kidney-genetics-db"
version = "0.1.0"
description = "Modern web platform for curating and exploring kidney disease-related genes"
authors = [
    {name = "Kidney Genetics Team", email = "team@kidney-genetics.org"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["genetics", "kidney", "fastapi", "bioinformatics", "genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core Framework
    "fastapi>=0.104.0,<0.129.0",
    "uvicorn[standard]>=0.24.0,<0.42.0",
    "pydantic[email]>=2.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    # Database
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.12,<2.0",
    "asyncpg>=0.29.0,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=3.2.0,<6.0.0",  # Pin bcrypt < 4.0 for passlib 1.7.4 compatibility
    "python-multipart>=0.0.18,<1.0.0",  # Security fix for CVE-2024-47874 (DoS)
    # HTTP Client & Caching
    "httpx>=0.25.0,<0.29.0",
    "requests>=2.31.0,<3.0.0",
    "aiofiles>=23.0.0,<26.0.0",
    # Configuration
    "pyyaml>=6.0.1",
    "hishel>=0.0.24,<2.0.0",
    "cachetools>=5.3.0,<7.0.0",
    # Data Processing
    "pandas>=2.1.0,<3.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2023.3",
    "click>=8.1.0,<9.0.0",
    "asyncclick>=8.1.8",
    # Pagination
    "fastapi-pagination>=0.12.0",
    "apscheduler>=3.11.0",
    "redis>=5.0.0,<6.0.0",  # Pinned for arq compatibility
    "arq>=0.26.3",  # Async Redis queue for background tasks
    "brotli>=1.1.0",
    "email-validator>=2.2.0",
    "scipy>=1.15.3",
    "prometheus-client>=0.23.1",
    "deepdiff>=8.6.1",
    "igraph>=0.11.9",
    "statsmodels>=0.14.5",
    "gseapy>=1.1.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-postgresql>=7.0.2",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "hypothesis>=6.90.0",
    "jsonschema>=4.20.0",
]

[project.urls]
Homepage = "https://github.com/kidney-genetics/kidney-genetics-db"
Documentation = "https://github.com/kidney-genetics/kidney-genetics-db/blob/main/docs/"
Repository = "https://github.com/kidney-genetics/kidney-genetics-db.git"
"Bug Tracker" = "https://github.com/kidney-genetics/kidney-genetics-db/issues"

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "hypothesis>=6.140.2",
    "psycopg-binary>=3.2.9",
    "pytest-asyncio>=1.1.0",
    "pytest-postgresql>=7.0.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.12.9",
    "types-cachetools>=6.2.0.20251022",
    "bandit[sarif]>=1.7.0",
    "pip-audit>=2.7.0",
    "pytest-timeout>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
^/tests/data/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "alembic/",
    "tests/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"  # Handle async tests automatically

# Sane defaults for better output
addopts = [
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-vv",
    "--color=yes",
]

# Test markers for organization
markers = [
    "unit: Pure unit tests without external dependencies",
    "integration: Integration tests requiring database",
    "e2e: End-to-end workflow tests",
    "slow: Tests taking >1s",
    "critical: Must-pass tests for deployment",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__init__.py",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic", ".venv"]
skips = ["B101"]  # Skip assert_used (common in tests)
severity = "medium"
confidence = "medium"
